EDA and Basic Python in R

--- a/Abdus_DS_Course_Data.html
+++ b/Abdus_DS_Course_Data.html
@@ -385,6 +385,30 @@ pre code {
 <h2>Importing the Data</h2>
 <pre class="r"><code>ds_course_data &lt;- read_csv(&quot;Data/Data - DS C1 Course.csv&quot;)</code></pre>
 </div>
+<div id="exploratory-data-analysis-eda" class="section level2">
+<h2>Exploratory Data Analysis (EDA)</h2>
+</div>
+<div id="running-python-in-r" class="section level2">
+<h2>Running Python in R</h2>
+<p>We will demonstrate how to run Python within R.</p>
+<pre class="r"><code>library(reticulate)</code></pre>
+<pre class="python"><code># import pandas as pd
+# import numpy as np</code></pre>
+<pre class="python"><code>
+for i in range(10):
+   print(i)
+   </code></pre>
+<pre><code>## 0
+## 1
+## 2
+## 3
+## 4
+## 5
+## 6
+## 7
+## 8
+## 9</code></pre>
+</div>
 </div>
 
 
