made few changes in my flexdashboard

--- a/Abdus_Flexdashboard.html
+++ b/Abdus_Flexdashboard.html
@@ -2008,6 +2008,49 @@ window.FlexDashboardComponents.push({
 <h2>Column</h2>
 <div id="abduss-flexdashboard" class="section level3">
 <h3>Abdus’s Flexdashboard</h3>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<pre><code> [1] &quot;Timestamp&quot;                                                                                                                      
+ [2] &quot;Student ID&quot;                                                                                                                     
+ [3] &quot;Do you understand that this is a paid course ?...3&quot;                                                                             
+ [4] &quot;Course Fee Email&quot;                                                                                                               
+ [5] &quot;Date sent&quot;                                                                                                                      
+ [6] &quot;Payment&quot;                                                                                                                        
+ [7] &quot;Payment Receipt Sent&quot;                                                                                                           
+ [8] &quot;How and where did you hear about this course?&quot;                                                                                  
+ [9] &quot;Which Country are you currently residing in?&quot;                                                                                   
+[10] &quot;Which City are you currently residing in?&quot;                                                                                      
+[11] &quot;Gender&quot;                                                                                                                         
+[12] &quot;Age&quot;                                                                                                                            
+[13] &quot;Are you currently attending University / College?&quot;                                                                              
+[14] &quot;Latest Degree Completed or in Progress?&quot;                                                                                        
+[15] &quot;Name of University or College currently or previously attended?&quot;                                                                
+[16] &quot;Discipline of Degree?&quot;                                                                                                          
+[17] &quot;Have you taken any foundational course in data science / econometrics / statistics / computer science?&quot;                         
+[18] &quot;What programming language(s) are you most comfortable in (R, Python, Java, JS, etc.)? If none please type \&quot;None\&quot;.&quot;            
+[19] &quot;Prior Work Experience in Data Science or Machine Learning&quot;                                                                      
+[20] &quot;Primary Reason for taking this course?&quot;                                                                                         
+[21] &quot;Do you understand that this is a paid course ?...21&quot;                                                                            
+[22] &quot;Prior Formal Education (course teaching or using R, university assignments, coding projects, course work, etc.) in R?&quot;          
+[23] &quot;Prior Formal Education (course teaching or using Python, university assignments, coding projects, course work, etc.) in Python?&quot;
+[24] &quot;Prior Work Experience in R.&quot;                                                                                                    
+[25] &quot;Prior Work Experience in Python.&quot;                                                                                               
+[26] &quot;Personal Education or Knowledge (learning R on your own and/or doing personal projects, etc.) in R?&quot;                            
+[27] &quot;Personal Education or Knowledge (learning Python on your own and/or doing personal projects, etc.) in Python?&quot;                  
+[28] &quot;Do you have a LinkedIn Account?&quot;                                                                                                
+[29] &quot;Do you have any feedback, thoughts, or comments you would like to share?&quot;                                                       </code></pre>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<pre><code># A tibble: 4 × 2
+# Groups:   Payment [4]
+  Payment     n
+  &lt;chr&gt;   &lt;int&gt;
+1 Maybe      13
+2 Paid       30
+3 Pending   197
+4 &lt;NA&gt;        7</code></pre>
 </div>
 </div>
 </div>
