created new page and did summary stat

--- a/Abdus_Flexdashboard.html
+++ b/Abdus_Flexdashboard.html
@@ -2040,19 +2040,119 @@ window.FlexDashboardComponents.push({
 [27] &quot;Personal Education or Knowledge (learning Python on your own and/or doing personal projects, etc.) in Python?&quot;                  
 [28] &quot;Do you have a LinkedIn Account?&quot;                                                                                                
 [29] &quot;Do you have any feedback, thoughts, or comments you would like to share?&quot;                                                       </code></pre>
+</div>
+</div>
+</div>
+<div id="statistics" class="section level1">
+<h1>Statistics</h1>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<pre><code># A tibble: 4 × 2
-# Groups:   Payment [4]
-  Payment     n
-  &lt;chr&gt;   &lt;int&gt;
-1 Maybe      13
-2 Paid       30
-3 Pending   197
-4 &lt;NA&gt;        7</code></pre>
-</div>
-</div>
+<table>
+<thead>
+<tr>
+<th style="text-align:left;">
+Gender
+</th>
+<th style="text-align:left;">
+Payment
+</th>
+<th style="text-align:right;">
+n
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+Female
+</td>
+<td style="text-align:left;">
+Maybe
+</td>
+<td style="text-align:right;">
+2
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Female
+</td>
+<td style="text-align:left;">
+Paid
+</td>
+<td style="text-align:right;">
+11
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Female
+</td>
+<td style="text-align:left;">
+Pending
+</td>
+<td style="text-align:right;">
+43
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Male
+</td>
+<td style="text-align:left;">
+Maybe
+</td>
+<td style="text-align:right;">
+11
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Male
+</td>
+<td style="text-align:left;">
+Paid
+</td>
+<td style="text-align:right;">
+19
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Male
+</td>
+<td style="text-align:left;">
+Pending
+</td>
+<td style="text-align:right;">
+153
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Male
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:right;">
+7
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Prefer not to say
+</td>
+<td style="text-align:left;">
+Pending
+</td>
+<td style="text-align:right;">
+1
+</td>
+</tr>
+</tbody>
+</table>
 </div>
 
 </div>
