Added a page and made the visualization better

--- a/Muzammil-s-Flexboard.html
+++ b/Muzammil-s-Flexboard.html
@@ -2173,16 +2173,57 @@ window.FlexDashboardComponents.push({
 [27] &quot;Personal.Education.or.Knowledge..learning.Python.on.your.own.and.or.doing.personal.projects..etc...in.Python.&quot;                  
 [28] &quot;Do.you.have.a.LinkedIn.Account.&quot;                                                                                                
 [29] &quot;Do.you.have.any.feedback..thoughts..or.comments.you.would.like.to.share.&quot;                                                       </code></pre>
+</div>
+<div id="statistics" class="section level1">
+<h1>Statistics</h1>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<pre><code># A tibble: 4 × 2
-  Do.you.understand.that.this.is.a.paid.course..     n
-  &lt;chr&gt;                                          &lt;int&gt;
-1 &quot;&quot;                                                14
-2 &quot;no&quot;                                              20
-3 &quot;No&quot;                                             120
-4 &quot;Yes&quot;                                             93</code></pre>
+<table>
+<thead>
+<tr>
+<th style="text-align:left;">
+Do.you.understand.that.this.is.a.paid.course..
+</th>
+<th style="text-align:right;">
+n
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+</td>
+<td style="text-align:right;">
+14
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+no
+</td>
+<td style="text-align:right;">
+20
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+No
+</td>
+<td style="text-align:right;">
+120
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Yes
+</td>
+<td style="text-align:right;">
+93
+</td>
+</tr>
+</tbody>
+</table>
 </div>
 
 </div>
