--- a/Abdus_DataCleaning.html
+++ b/Abdus_DataCleaning.html
@@ -370,7 +370,105 @@ pre code {
 </div>
 
 
+<pre class="r"><code>library(tidyverse)</code></pre>
+<pre><code>## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
+## ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
+## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
+## ✔ tidyr   1.2.0      ✔ stringr 1.4.1 
+## ✔ readr   2.1.2      ✔ forcats 0.5.2 
+## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+## ✖ dplyr::filter() masks stats::filter()
+## ✖ dplyr::lag()    masks stats::lag()</code></pre>
+<pre class="r"><code>library(lubridate)</code></pre>
+<pre><code>## 
+## Attaching package: &#39;lubridate&#39;
+## 
+## The following objects are masked from &#39;package:base&#39;:
+## 
+##     date, intersect, setdiff, union</code></pre>
+<pre class="r"><code> dataRaw &lt;- read_csv(&quot;Data/Data - DS C1 Course.csv&quot;)</code></pre>
+<pre><code>## New names:
+## Rows: 247 Columns: 29
+## ── Column specification
+## ──────────────────────────────────────────────────────── Delimiter: &quot;,&quot; chr
+## (27): Timestamp, Do you understand that this is a paid course ?...3, Co... dbl
+## (1): Student ID date (1): Date sent
+## ℹ Use `spec()` to retrieve the full column specification for this data. ℹ
+## Specify the column types or set `show_col_types = FALSE` to quiet this message.
+## • `Do you understand that this is a paid course ?` -&gt; `Do you understand that
+##   this is a paid course ?...3`
+## • `Do you understand that this is a paid course ?` -&gt; `Do you understand that
+##   this is a paid course ?...21`</code></pre>
+<pre class="r"><code> head(dataRaw, n = 10)</code></pre>
+<pre><code>## # A tibble: 10 × 29
+##    Timestamp  Stude…¹ Do yo…² Cours…³ Date sen…⁴ Payment Payme…⁵ How a…⁶ Which…⁷
+##    &lt;chr&gt;        &lt;dbl&gt; &lt;chr&gt;   &lt;chr&gt;   &lt;date&gt;     &lt;chr&gt;   &lt;chr&gt;   &lt;chr&gt;   &lt;chr&gt;  
+##  1 8/25/2022…       1 Yes     Sent    2022-08-26 Paid    Yes     Throug… Pakist…
+##  2 8/22/2022…       2 No      Sent    2022-08-23 Pending &lt;NA&gt;    Friend  Pakist…
+##  3 8/22/2022…       3 No      Sent    2022-08-23 Pending &lt;NA&gt;    WhatsA… Pakist…
+##  4 8/22/2022…       4 No      Sent    2022-08-23 Pending &lt;NA&gt;    Whatsa… Pakist…
+##  5 8/22/2022…       5 Yes     Sent    2022-08-23 Maybe   &lt;NA&gt;    Throug… Pakist…
+##  6 8/22/2022…       6 No      Sent    2022-08-23 Pending &lt;NA&gt;    WhatsA… Pakist…
+##  7 8/22/2022…       7 No      Sent    2022-08-23 Pending &lt;NA&gt;    Linked… Pakist…
+##  8 8/22/2022…       8 Yes     Sent    2022-08-23 Pending &lt;NA&gt;    Group   Pakist…
+##  9 8/22/2022…       9 No      Sent    2022-08-24 Pending &lt;NA&gt;    linked… Pakist…
+## 10 8/22/2022…      10 No      Sent    2022-08-24 Pending &lt;NA&gt;    Linked… Pakist…
+## # … with 20 more variables: `Which City are you currently residing in?` &lt;chr&gt;,
+## #   Gender &lt;chr&gt;, Age &lt;chr&gt;,
+## #   `Are you currently attending University / College?` &lt;chr&gt;,
+## #   `Latest Degree Completed or in Progress?` &lt;chr&gt;,
+## #   `Name of University or College currently or previously attended?` &lt;chr&gt;,
+## #   `Discipline of Degree?` &lt;chr&gt;,
+## #   `Have you taken any foundational course in data science / econometrics / statistics / computer science?` &lt;chr&gt;, …</code></pre>
+<pre class="r"><code>dataRenamed &lt;- dataRaw %&gt;% rename(&quot;Id&quot;= &quot;Student ID&quot;, &quot;Date_time&quot; = &quot;Timestamp&quot;, &quot;Qr_Uni_Col&quot; = &quot;Name of University or College currently or previously attended?&quot;)
 
+# check for renaming
+names(dataRenamed[1:10])</code></pre>
+<pre><code>##  [1] &quot;Date_time&quot;                                         
+##  [2] &quot;Id&quot;                                                
+##  [3] &quot;Do you understand that this is a paid course ?...3&quot;
+##  [4] &quot;Course Fee Email&quot;                                  
+##  [5] &quot;Date sent&quot;                                         
+##  [6] &quot;Payment&quot;                                           
+##  [7] &quot;Payment Receipt Sent&quot;                              
+##  [8] &quot;How and where did you hear about this course?&quot;     
+##  [9] &quot;Which Country are you currently residing in?&quot;      
+## [10] &quot;Which City are you currently residing in?&quot;</code></pre>
+<pre class="r"><code>dataselected &lt;- select(dataRenamed, Id, Date_time, Qr_Uni_Col)
+
+# MAKING id AS row name
+
+dataselected &lt;- column_to_rownames(dataselected, var= &quot;Id&quot;)
+
+head(dataselected)</code></pre>
+<pre><code>##            Date_time                                            Qr_Uni_Col
+## 1 8/25/2022 14:35:19                                University of Illinois
+## 2  8/22/2022 5:25:04                                        Ned university
+## 3  8/22/2022 5:26:34                  Univeristy of agriculture, Faislabad
+## 4  8/22/2022 5:27:38 Institute of Management Sciences Peshawar (IMScieces)
+## 5  8/22/2022 5:31:42                  Institute of Business Administration
+## 6  8/22/2022 5:32:14                  Institute of Business Administration</code></pre>
+<pre class="r"><code># Converting time column to date time format
+dataselected$Date_time &lt;- lubridate::ymd_hms(dataselected$Date_time)</code></pre>
+<pre><code>## Warning: All formats failed to parse. No formats found.</code></pre>
+<pre class="r"><code># Separating date and time into different column
+dataselected &lt;- tidyr::separate(dataselected, Date_time, c(&quot;Date&quot;, &quot;Time&quot;), sep = &quot; &quot;)
+
+dataselected$Date &lt;- lubridate::ymd(dataselected$Date)
+
+head(dataselected)</code></pre>
+<pre><code>##   Date Time                                            Qr_Uni_Col
+## 1 &lt;NA&gt; &lt;NA&gt;                                University of Illinois
+## 2 &lt;NA&gt; &lt;NA&gt;                                        Ned university
+## 3 &lt;NA&gt; &lt;NA&gt;                  Univeristy of agriculture, Faislabad
+## 4 &lt;NA&gt; &lt;NA&gt; Institute of Management Sciences Peshawar (IMScieces)
+## 5 &lt;NA&gt; &lt;NA&gt;                  Institute of Business Administration
+## 6 &lt;NA&gt; &lt;NA&gt;                  Institute of Business Administration</code></pre>
+<pre class="r"><code># now we grouped the data by day to check how many registeration done per on each day
+
+groupeddata &lt;- dataselected %&gt;% 
+  group_by(day &lt;- lubridate:: floor_date(x= Date , unit= &#39;day&#39;)) %&gt;% 
+  summarize(grouped = n())</code></pre>
 
 
 
